# BasicSelenium

./: .gitignore  pyproject.toml
seleniumx2_chehly_aks/: main.py
