[tool.poetry]
name = "basicseleniumparser"
version = "0.1.0"
description = ""
authors = ["Minin <79887423414@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^5.2.2"
selenium-stealth = "^1.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
